fix spacing issue

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2 {
 h2 + p {    /* this selector only selects the paragraph right after h2 */
     color: #F18119;
     font-weight: 900;
-    margin-top: 0;
+    margin-top: 0.5em;
     text-transform: uppercase;
 }
 
